AX: `aria-activedescendant` doesn't work with a standard "listbox" pattern https://bugs.webkit.org/show_bug.cgi?id=224582 rdar://76670072

Reviewed by Andres Gonzalez.

There were a few things preventing this from working.
1) Relationships in frames were broken after the change to cache relationships in a central map.
2) activeDescendant wasn't checking if the right frame was focused.
3) activeDescendant needed to handle the aria-controls case in order to pick the right target for a notification.
4) A VoiceOver side fix also was required: rdar://103609280

* LayoutTests/accessibility/mac/active-descendant-with-aria-controls-expected.txt: Added.
* LayoutTests/accessibility/mac/active-descendant-with-aria-controls.html: Added.
* LayoutTests/accessibility/mac/relationships-in-frames-expected.txt: Added.
* LayoutTests/accessibility/mac/relationships-in-frames.html: Added.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::handleActiveDescendantChanged):
(WebCore::AXObjectCache::updateRelationsForTree):

Canonical link: https://commits.webkit.org/258478@main